Blackpurl/src/objects/IFW_IntegrationConfig__c.object
<CustomObject>
    <description>Stores Integration Configuration for Specific Integration to a Dealer Org</description>
    <fields>
        <fullName>Access_Token_Secret__c</fullName>
        <label>Access Token Secret</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auth_Scheme__c</fullName>
        <label>Auth Scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer_Token__c</fullName>
        <label>Bearer Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Id__c</fullName>
        <label>CS_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certifcate_Password__c</fullName>
        <label>Certifcate Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Rec_Id__c</fullName>
        <label>Subscriber Rec Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout value in Ms</description>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Expiry__c</fullName>
        <description>Token lifetime in seconds</description>
        <label>Token Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_Type__c</fullName>
        <label>Token Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IFW_IntegrationConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Integration_Name__c</columns>
        <columns>Auth_Scheme__c</columns>
        <columns>Enabled__c</columns>
        <columns>Is_Master__c</columns>
        <columns>Org_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Master_Configs</fullName>
        <columns>NAME</columns>
        <columns>Access_Token__c</columns>
        <columns>Bearer_Token__c</columns>
        <columns>Auth_Scheme__c</columns>
        <columns>Certifcate_Password__c</columns>
        <columns>Consumer_Secret__c</columns>
        <columns>Enabled__c</columns>
        <columns>Integration_Name__c</columns>
        <columns>Is_Master__c</columns>
        <columns>Token_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Master__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Master Configs</label>
    </listViews>
    <nameField>
        <displayFormat>INTCONFIG-{00000}</displayFormat>
        <label>IFW_IntegrationConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFW_IntegrationConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>